# cs2281r-hw0

./: pyproject.toml
data/drive-download/: 1st Writing Assignment_ Augusta Harvardiana.docx  2023 Board Application.docx  2023 Summer Plans – Iñaki Arango.docx  2023 Syllabus - Iñaki Arango.docx  2023 Syllabus Brainstorming.docx  2024 GEM Bio Financial Assistance Application.docx  2024 Point72 Academy Investment Analyst Summer Internship Program.docx  2024 Seminar Leader Application_ Course Schedule.docx  APA Template Google Doc.docx  Adams House – Sophomore Matching Form.docx  Adecco Cover Letter.docx  Application for Argentinian Fellowships.docx  Application for Tech Fellows 2.docx  Application to I am_.docx  Application.docx  Arete Fellowship Application.docx  Augusta Harvardiana Outline.docx  BSE Essay - 1_300-500 words.docx  Board Application 2024.docx  Bracebridge Captial Winternship.docx  CKS Comp Application 2023.docx  COVID Explanation Text (FINISHED).docx  CPR Answers.docx  CQs.docx  CSS Profile Correction.docx  Caffeine Two-Pager.docx  Canada OPR Extension Letter - IRCC Web Form.docx  Carbon Two-Pager.docx  Career Objective.docx  Caso Barilla.docx  Change Maker Summit Applications.docx  Columbia Interview Preparation.docx  Common App Essay - 555_650 words - FINAL.docx  Common App prompts.docx  Community essay - 1_150-200 words.docx  Community essay - 1_250 words.docx  Compass Two-Pager.docx  Cruise Two-Pager.docx  Cuestionario McDonald_s - Marketing.docx  Cuestionario inicial.docx  (+218 more)
data/processed/: inaki_dataset.txt
scripts/: generate_text_dataset.py
(+10 files in other folders)
