[project]
name = "cs2281r-hw0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ruff>=0.6.1",
    "pypandoc>=1.13",
    "typer>=0.12.4",
    "torch>=2.4.0",
    "numpy>=2.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
